[package]
name = "api-server"
edition = "2018"
version = "0.1.1"
authors = ["Rotem Yaari"]

[dependencies]
actix = "0.7.9"
actix-web = "0.7.17"
futures = "0.1.25"
url = "1.7.2"
log = "0.4.6"
env_logger = "0.6.0"
failure = "0.1.4"
structopt = "0.2.14"
sentry = "0.12.0"
sentry-actix = "0.12.0"
serde = "1.0.84"
serde_derive = "1.0.84"
